--- a/package.json
+++ b/package.json
@@ -16,17 +16,23 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.3",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^5.3.3",
     "gatsby-plugin-styled-components": "^6.3.0",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.10",
+    "@types/qs": "^6.9.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/styled-components": "^5.1.26",
     "typescript": "^4.9.3"
   }
 }
